--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import 'variables.css'; 
+
+*{
+  box-sizing: border-box;
+  margin: 0; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  width: 100vw; 
+}
+main{
+  width: 100%; 
+ 
+}
+
+body{
+  background-color: var(--bg); 
+  font-family: 'Space Mono', monospace;
+  width: 100%; 
+}
+
+.title{
+  font-size: 1.5rem; 
+  text-align: center;
+  text-transform: uppercase;
+  margin: 2rem 0; 
+  letter-spacing: .4em;
+  color: var(--card-bg)
+}
+
+input:focus-visible{
+  outline: none; 
+}
+
+@media (min-width: 700px){
+ 
 }
